# bare-metal-rust-nrf52840

./: .gitignore  README.md  RELEASE_NOTES.md  analyze_project.py  book.md
Docs/: AI_Analysis.md  Plan.md  Zephyr_Workspace_Setup.md
Learning Documents/: 2026-05-16 - Introduction to Zephyr RTOS.md  2026-05-17 - Zephyr Project Structure and Build System.md  2026-05-18 - Device Tree Basics in Zephyr.md  2026-05-19 - Kconfig and prj.conf Configuration.md  2026-05-20 - Writing a Basic Zephyr Application.md  2026-05-21 - Using Zephyr Drivers and Device Binding.md  2026-05-22 - Debugging and Testing Zephyr Applications.md  2026-05-23 - Threads and Synchronization.md  2026-05-24 - GPIO and Interrupts.md  2026-05-25 - Custom PCB Board Definition.md  2026-05-26 - USB CDC-ACM Communication.md  2026-05-27 - CBOR Encoding over USB.md  2026-05-28 - Zephyr Shell Subsystem.md  2026-05-29 - I2C Sensor Integration.md  2026-05-30 - KXTJ3-1057 Accelerometer with USB Shell.md  2026-05-31 - KXTJ3-1057 Accelerometer CBOR over USB.md  2026-06-01 - KXTJ3 CBOR on Custom PCB.md  2026-06-02 - BLE Peripheral Advertising.md  2026-06-03 - SPI Communication.md  2026-06-04 - ADC Reading.md  2026-06-05 - PWM LED Dimming.md  2026-06-06 - NVS Flash Storage.md  2026-06-07 - Work Queues and Kernel Timers.md  (+32 more)
rust_src/day04_systick_delays/: Cargo.toml
rust_src/day04_systick_delays/src/: main.rs
rust_src/day07_gpiote_interrupts/: Cargo.toml
rust_src/day07_gpiote_interrupts/src/: main.rs
rust_src/day10_rtic_concurrency/: Cargo.toml
rust_src/day10_rtic_concurrency/src/: main.rs
(+146 files in other folders)
